--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "test": "jasmine"
   },
   "author": "Manuel Hitz",
   "dependencies": {
@@ -13,6 +14,7 @@
     "body-parser": "^1.17.2"
   },
   "devDependencies": {
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "jasmine": "^2.7.0"
   }
 }
