--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Manuel Hitz",
   "dependencies": {
     "express": "^4.15.3",
-    "body-parser": "^1.17.2"
+    "body-parser": "^1.17.2",
+    "backbone": "^1.3.3",
+    "jquery": "^3.2.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "webpack": "^3.4.1",
