--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "body-parser": "^1.17.2",
     "backbone": "^1.3.3",
     "jquery": "^3.2.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "mustache": "^2.3.0"
   },
   "devDependencies": {
     "webpack": "^3.4.1",
-    "jasmine": "^2.7.0"
+    "jasmine": "^2.7.0",
+    "html-loader": "^0.5.0"
   }
 }
