--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "backbone": "^1.3.3",
     "jquery": "^3.2.1",
     "underscore": "^1.8.3",
-    "mustache": "^2.3.0"
+    "mustache": "^2.3.0",
+    "reset-css": "^2.2.1"
   },
   "devDependencies": {
     "webpack": "^3.4.1",
     "jasmine": "^2.7.0",
-    "html-loader": "^0.5.0"
+    "html-loader": "^0.5.0",
+    "css-loader": "^0.28.4",
+    "style-loader": "^0.18.2"
   }
 }
