--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jasmine": "^2.7.0",
     "html-loader": "^0.5.0",
     "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0"
   }
 }
